Search interface improvements
This makes a few interface improvements related to #157 and the search form.

* `reviewed` class converted to `data-filter` attribute. This means additional
  future search inputs can be controlled with similar CSS.
* The "Search reviews by user" field now appears as soon as "Reviewed cases"
  is selected as a filter.
* `search-form` class removed from the search form fieldset, the `filters-form`
  ID now handles that. Styles updated accordingly.
* The leaderboard reviews search link now has an appropriate `title` attribute.
* `search-page` i18n key renamed to `searchCriteria-page`. Since it looks like
  this key never really existed, this shouldn't be a problem.
* `search` i18n key renamed to `filter-page` to remove ambiguity and match its
  variable name in code. This isn't mission-critical, and could be dropped
  should it be problematic for @translatewiki.

--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -82,8 +82,8 @@
 	{% block main %}
 		{# Make the filters invisible but don't hide markup so that JS can react to clicking on WP bubbles #}
 		<section class="filters container-fluid{% if permalink %} none{% endif %}">
-			<form id="filters-form">
-				<fieldset class="form-group filters-fieldset text-center search-form{% if filter != 'reviewed' %} reviewed{% endif %}">
+			<form id="filters-form" data-filter="{{ filter }}">
+				<fieldset class="form-group filters-fieldset text-center">
 					<div class="cases-filter">
 						{% for type in filterTypes %}
 							<span class="radio-inline">
@@ -107,7 +107,7 @@
 					{# End the row and start a new one to display the search box. #}
 					</div>
 					<label class="search-title search-label" for="searchText">
-						{{ 'search' | message }}
+						{{ 'filter-page' | message }}
 					</label><input type="text" id="searchText" name="searchText" class="search-title searchbox"
 							value="{{ searchText }}">
 					<label class="search-user search-label" for="filterUser">
@@ -120,7 +120,7 @@
 								checked="checked">
 						{#{% endif %}>#}
 						<label class="search-select-label" for="searchCriteria">
-							{{ 'search-page' | message }}
+							{{ 'searchCriteria-page' | message }}
 						</label>
 					</div>
 					<button type="submit" class="btn btn-primary btn-sm btn-submit-filters">
