Remove unused searchCriteria param, rename searchText to filterPage
Summary of changes:
* Keep the naming of filter params consistent
* Remove unused code and i18n messages
* Remove all traces of the 'mine' filter, superceded by username filter
* Remove use of a deprecated GuzzleHttp method
* Use null coalescing operator where possible
* Add some type hints and return types
* Other minor improvements and typo fixes

Bug: T332935

--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -106,23 +106,14 @@
 
 					{# End the row and start a new one to display the search box. #}
 					</div>
-					<label class="search-title search-label" for="searchText">
+					<label class="search-title search-label" for="filterPage">
 						{{ 'filter-page' | message }}
-					</label><input type="text" id="searchText" name="searchText" class="search-title searchbox"
-							value="{{ searchText }}">
+					</label><input type="text" id="filterPage" name="filterPage" class="search-title searchbox"
+							value="{{ filterPage }}">
 					<label class="search-user search-label" for="filterUser">
 						{{ 'filter-user' | message }}
 					</label><input type="text" id="filterUser" name="filterUser" class="search-user searchbox"
 							value="{{ filterUser }}">
-					<div class="form-check">
-						<input type="radio" name="searchCriteria" value="page"
-								{# Todo - To be used if we get more criterias {% if searchCriteria == 'page' %} #}
-								checked="checked">
-						{#{% endif %}>#}
-						<label class="search-select-label" for="searchCriteria">
-							{{ 'searchCriteria-page' | message }}
-						</label>
-					</div>
 					<button type="submit" class="btn btn-primary btn-sm btn-submit-filters">
 						{{ 'submit' | message }}
 					</button>
