Fix 'load more' functionality
Before we were LIMITing on the total number of rows, not the number of
unique diffs (we do a JOIN on the one-to-many report_sources table).

Also remove 'js-' prefix convention which was adding more confusion than
it was solving.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -104,7 +104,7 @@
 					{% else %}
 						{% block loadmore %}
 							<button id="btn-load-more"
-								class="btn btn-md btn-primary btn-load-more js-load-more">{{ msg('footer-loadmore') }}</button>
+								class="btn btn-md btn-primary btn-load-more">{{ msg('footer-loadmore') }}</button>
 						{% endblock %}
 					{% endif %}
 				</div>
