Prevent users from reviewing their own edits
Update NPM dependencies

Fix bug with undoing reviews

Disable Docker tests since that all needs to be rewritten anyway

Bug: T334272

--- a/assets/app.less
+++ b/assets/app.less
@@ -491,11 +491,13 @@ a[ href='' ] {
 		content: '+';
 	}
 }
+
 .diff-neg {
-	color: #8B0000;
+	color: #8b0000;
 }
+
 .diff-zero {
-	color: #A2A9B1;
+	color: #a2a9b1;
 }
 
 .edit-tag {
