--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
 		const jsUnauthorized = "{{ msg('js-unauthorized') }}",
 			jsDbError = "{{ msg( 'js-dberror' ) }}",
 			jsUndoOwnOnly = "{{ msg( 'js-undo-own-only' ) }}",
+			jsSelfReviewError = "{{ msg( 'js-self-review' ) }}",
 			jsUnknownError = "{{ msg( 'js-unknown-error' ) }}",
 			jsLoadMore = "{{ msg( 'footer-loadmore' ) }}",
 			jsNoMore = "{{ msg( 'footer-nomore' ) }}",
