Only show iThenticate report link if user is logged in
This is a requirement from Turnitin

--- a/templates/feed.html.twig
+++ b/templates/feed.html.twig
@@ -157,10 +157,12 @@
 							</div>
 						{% endfor %}
 					{% endif %}
-					<a class="btn btn-xs btn-primary" href='{{ path('ithenticate', {submissionId: row.submissionId}) }}' rel='nofollow noreferrer noopener' target="_blank">
-						<span class="glyphicon glyphicon-new-window"></span>
-						{{ msg('record-ithenticate') }}
-					</a>
+					{% if logged_in_user() %}
+						<a class="btn btn-xs btn-primary" href='{{ path('ithenticate', {submissionId: row.submissionId}) }}' rel='nofollow noreferrer noopener' target="_blank">
+							<span class="glyphicon glyphicon-new-window"></span>
+							{{ msg('record-ithenticate') }}
+						</a>
+					{% endif %}
 				</div>
 			</article>
 		{% endfor %}
