Will not be translated

--- a/templates/feed.html.twig
+++ b/templates/feed.html.twig
@@ -42,7 +42,7 @@
 							<small>
 								(<a href="{{ row.undoUrl }}" target="_blank">{{ msg('undo')|lower }}</a>
 								{%- if 'deleterevision' in user_rights -%}
-									&nbsp;&middot;&nbsp;<a href="{{ row.revdelUrl }}" target="_blank">{{ msg('revdel')|lower }}</a>
+									&nbsp;&middot;&nbsp;<a href="{{ row.revdelUrl }}" target="_blank">revdel</a>
 								{%- endif -%}
 								)
 							</small>
